the table separator fixed and made more visible

--- a/frontend/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/frontend/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -134,6 +134,8 @@ h2 {
   border-left: 0px !important;
   border-right: 0px;
   text-align: center !important;
+  background-color: colors.$gray-200;
+  font-weight: 600;
 
   td {
     text-align: center !important;
